--- a/weapp/app.json
+++ b/weapp/app.json
@@ -16,7 +16,7 @@
   "window": {
     "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#1AAD19",
-    "navigationBarTitleText": "壹家宠物狗粮猫粮湿粮天然粮",
+    "navigationBarTitleText": "壹家堂宠物",
     "navigationBarTextStyle": "white",
     "backgroundColor": "#1AAD19",
     "enablePullDownRefresh": false
